<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@drawable/round_follow_primary_color"
    android:paddingStart="@dimen/space_20"
    android:paddingEnd="@dimen/space_20"
    android:paddingTop="@dimen/space_20"
    android:paddingBottom="@dimen/space_30"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/outline_playlist_add_24"
        android:text="@string/add_playlist"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ip_name"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:focusable="true"
        android:textColor="@android:color/white"
        android:hint="@string/enter_playlist_name"
        android:textColorHint="@color/text_color_hint"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="end">


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_dialog_button"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_button"
            android:text="@string/save" />

    </LinearLayout>


</LinearLayout>