<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recycler_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.HelpAndFeedbackFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:title="@string/video_demo_title"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_amp_feedback"
            android:textSize="18sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingLeft="5dp"
        android:text="@string/rating"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_baseline_star"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:numStars="5"
        android:progressTint="@color/colorToolBarIcon"
        android:rating="0"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/ip_comment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_feedback"
        android:gravity="start|top"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/search_bar_hint"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.437"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/submit"
        android:background="@drawable/bg_dialog_button"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>